--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,15 +2,15 @@ services:
   - name: docker:dind
     alias: docker
 
-variables:
+#variables:
   # When using dind service, you must instruct Docker to talk with
   # the daemon started inside of the service. The daemon is available
   # with a network connection instead of the default
   # /var/run/docker.sock socket.
-  DOCKER_HOST: tcp://docker:2376
-  DOCKER_CERT_PATH: /certs/client
-  DOCKER_TLS_CERTDIR: /certs
-  DOCKER_DRIVER: overlay2
+  #DOCKER_HOST: tcp://docker:2376
+  #DOCKER_CERT_PATH: /certs/client
+  #DOCKER_TLS_CERTDIR: /certs
+  #DOCKER_DRIVER: overlay2
 stages:
   - build
   
@@ -24,7 +24,7 @@ docker-build:
     - ls -al
     - cat /etc/resolv.conf
     - cat /etc/hosts
-    - docker ps
+    #- docker ps
 
   script:
     - docker build -t ubuntu .
