--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ docker-build:
   script:
     - docker build -t ubuntu .
 
-docker-build:
+ubuntu-build:
   image: ubuntu:20.04
   stage: build
   #environment:
