--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ image: docker:stable
 services:
   - name: docker:dind
     alias: docker
+  - name: ubuntu:20.04
+    alias: ubuntu
 
 #variables:
 #  DOCKER_HOST: tcp://docker:2376
@@ -12,7 +14,7 @@ services:
 
 stages:
   - build
-  
+  - test  
 docker-build:
   #image: docker:dind
   stage: build
@@ -30,7 +32,7 @@ docker-build:
 
 ubuntu-build:
   image: ubuntu:20.04
-  stage: build
+  stage: test
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
   tags:
