--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,4 @@
-image: 
-  - name: docker:stable
-  - name: ubuntu:20.04
-    entrypoint: ["/bin/sh", "-c"]
+#image: docker:stable
 
 # 使用docker in docker 必要的 services 區塊
 services:
