--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@
 services:
   - name: docker:dind
     alias: docker
-#  - name: ubuntu:20.04
-#    alias: ubuntu
 
 #variables:
 #  DOCKER_HOST: tcp://docker:2376
@@ -30,8 +28,13 @@ docker-build:
   script:
     - docker build -t ubuntu .
 
+
+services:
+  - name: ubuntu:20.04
+    alias: ubuntu
+
 ubuntu-build:
-  image: ubuntu:20.04
+  #image: ubuntu:20.04
   stage: test
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
