--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,12 +29,9 @@ docker-build:
     - docker build -t ubuntu .
 
 
-services:
-  - name: ubuntu:20.04
-    alias: ubuntu
 
 ubuntu-build:
-  #image: ubuntu:20.04
+  image: ubuntu:20.04
   stage: test
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
