--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ docker-build:
     - cat /etc/hosts
 
   script:
-    - docker build -t ubuntu .
+    - docker pull busybox
 
 
 
@@ -39,4 +39,4 @@ ubuntu-build:
     - andyhuang-ubuntu
 
   script:
-    - lsb_release -a
+    - env
