--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,17 +5,17 @@ services:
   - name: docker:dind
     alias: docker
 
-#variables:
-#  DOCKER_HOST: tcp://docker:2376
-#  DOCKER_TLS_CERTDIR: "/certs"
-#  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
+variables:
+  DOCKER_HOST: tcp://docker:2376
+  DOCKER_TLS_CERTDIR: "/certs"
+  DOCKER_CERT_PATH: "$DOCKER_TLS_CERTDIR/client"
 
 stages:
   - build
   - test  
 
 docker-build:
-  image: docker:dind
+  image: docker:stable
   stage: build
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
