--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 
 # 使用docker in docker 必要的 services 區塊
 services:
-  - name: docker:dind
+  - name: docker:stable
     alias: docker
 
 variables:
@@ -15,7 +15,7 @@ stages:
   - test  
 
 docker-build:
-  image: docker:stable
+  image: docker:dind
   stage: build
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
