--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,10 +28,10 @@ docker-build:
 
   script:
     - |
-      - echo $HOSTNAME
-        pwd
-        docker pull busybox
-        docker images
+      echo $HOSTNAME
+      pwd
+      docker pull busybox
+      docker images
 
 ubuntu-build:
   image: ubuntu:20.04
