--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,10 +28,7 @@ docker-build:
 
   script:
     - |
-      echo $HOSTNAME
-      pwd
-      docker pull busybox
-      docker images
+      docker login registry.gitlab.com -u $GITLAB_USER  -p GITLAB_TOKEN 
 
 ubuntu-build:
   image: ubuntu:20.04
