--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ docker-build:
   script:
     - |
       echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
+      docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
+      docker push registry.gitlab.com/chtandy/docker-ubuntu
 
 ubuntu-build:
   image: ubuntu:20.04
