--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,7 +29,7 @@ docker-build:
   script:
     - |
       echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
-      docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
+      set -x docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
       docker push registry.gitlab.com/chtandy/docker-ubuntu
 
 ubuntu-build:
