--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,6 +28,7 @@ docker-build:
       cat /etc/hosts
 
   script:
+    # 有錯誤就離開
     - set -eux && echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
     - set -ex && docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
     - set -ex && docker push registry.gitlab.com/chtandy/docker-ubuntu
