--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,9 +31,10 @@ docker-build:
 
   script:
     # 有錯誤就離開
-    - set -eux && echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
-    - set -ex && docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
-    - set -ex && docker push registry.gitlab.com/chtandy/docker-ubuntu
+    - docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
+    #- set -eux && echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
+    #- set -ex && docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
+    #- set -ex && docker push registry.gitlab.com/chtandy/docker-ubuntu
 
 ubuntu-build:
   # 需指定，否則會使用services區塊指定的image造成pipeline錯誤
