--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,13 +28,13 @@ docker-build:
       ls -al
       cat /etc/resolv.conf
       cat /etc/hosts
-
+      echo $CI_REGISTRY_USER
   script:
     # 有錯誤就離開
     - docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
-    #- set -eux && echo ${GITLAB_TOKEN} | docker login registry.gitlab.com -u ${GITLAB_USER} --password-stdin
-    #- set -ex && docker build -t registry.gitlab.com/chtandy/docker-ubuntu .
-    #- set -ex && docker push registry.gitlab.com/chtandy/docker-ubuntu
+    #- set -eux && echo ${GITLAB_TOKEN} | docker login $CI_REGISTRY -u ${GITLAB_USER} --password-stdin
+    #- set -ex && docker build -t $CI_REGISTRY/chtandy/docker-ubuntu .
+    #- set -ex && docker push $CI_REGISTRY/chtandy/docker-ubuntu
 
 ubuntu-build:
   # 需指定，否則會使用services區塊指定的image造成pipeline錯誤
