--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,10 +31,10 @@ docker-build:
     - echo $CI_REGISTRY_IMAGE
   script:
     # 有錯誤就離開
-    - docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
+    - set -eux && docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
     #- set -eux && echo ${GITLAB_TOKEN} | docker login $CI_REGISTRY -u ${GITLAB_USER} --password-stdin
-    #- set -ex && docker build -t $CI_REGISTRY/{GITLAB_USER}/docker-ubuntu .
-    #- set -ex && docker push $CI_REGISTRY/chtandy/docker-ubuntu
+    - set -ex && docker build -t $CI_REGISTRY_IMAGE .
+    - set -ex && docker push $CI_REGISTRY_IMAGE
 
 ubuntu-build:
   # 需指定，否則會使用services區塊指定的image造成pipeline錯誤
