--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,7 +36,8 @@ docker-build:
 
   script:
     # 有錯誤就離開 ，$CI_REGISTRY_IMAGE $CI_REGISTRY  是系統提供的 
-    - set -eux && docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
+    - set -eux && docker logon -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY  
+    #- set -eux && docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
     #- set -ex && docker build -t $CI_REGISTRY_IMAGE .
     #- set -ex && docker push $CI_REGISTRY_IMAGE
 
