--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,13 +33,13 @@ docker-build:
     - echo $CI_REGISTRY
     - echo $CI_REGISTRY_USER
     - echo $CI_REGISTRY_PASSWORD
+    - echo $CI_COMMIT_REF_NAME
 
   script:
     # 有錯誤就離開 ，$CI_REGISTRY_IMAGE $CI_REGISTRY  是系統提供的 
     - set -eux && docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY  
-    #- set -eux && docker login -u ${GITLAB_USER} -p ${GITLAB_TOKEN} $CI_REGISTRY
-    - set -ex && docker build -t $CI_REGISTRY_IMAGE .
-    - set -ex && docker push $CI_REGISTRY_IMAGE
+    #- set -ex && docker build -t $CI_REGISTRY_IMAGE .
+    #- set -ex && docker push $CI_REGISTRY_IMAGE
 
 ubuntu-build:
   # 需指定，否則會使用services區塊指定的image造成pipeline錯誤
