--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ docker-build:
   stage: build
   #environment:
   #  name: review/$CI_COMMIT_REF_NAME
+  variables:
+    IMAGE_TAG: $CI_REGISTRY_IMAGE:$CI_COMMIT_REF_NAME
   tags:
     - andyhuang-lab
   before_script:
@@ -34,12 +36,14 @@ docker-build:
     - echo $CI_REGISTRY_USER
     - echo $CI_REGISTRY_PASSWORD
     - echo $CI_COMMIT_REF_NAME
+    - echo $CI_COMMIT_REF_SLUG
+    - echo $IMAGE_TAG
 
   script:
     ### 有錯誤就離開 ，$CI_REGISTRY_IMAGE $CI_REGISTRY_USER $CI_REGISTRY_PASSWORD $CI_REGISTRY  是系統提供的 
     - set -eux && docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY  
-    #- set -ex && docker build -t $CI_REGISTRY_IMAGE .
-    #- set -ex && docker push $CI_REGISTRY_IMAGE
+    #- set -ex && docker build -t $IMAGE_TAG .
+    #- set -ex && docker push $IMAGE_TAG
 
 ubuntu-build:
   # 需指定，否則會使用services區塊指定的image造成pipeline錯誤
